Opened 8 years ago

Closed 8 years ago

#13526 closed bug (fixed)

BFont::Blocks doesn't work properly

Reported by: dsizzle Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: - General Version: R1/Development
Keywords: BFont, Blocks, unicode Cc:
Blocked By: Blocking:
Platform: All

Description

While working on #3651, I realized my implementation of BFont::Blocks (#11518) has some bugs. I'm working on a fix but needed a place to put the patch and didn't want to reopen #11518 since it's already merged.

Attachments (2)

0002-Fixes-13526-so-that-BFont-Blocks-properly-set-bitmas.patch (4.6 KB ) - added by dsizzle 8 years ago.
0001-Critical-cleanup-code-for-GetUnicodeBlocks-and-Inclu.patch (3.4 KB ) - added by dsizzle 8 years ago.
Patch to fix critical lock issue and memory leaks

Download all attachments as: .zip

Change History (8)

comment:1 by dsizzle, 8 years ago

patch: 01

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Applied in hrev51176. Unit tests for the fixed problems would be welcome.

comment:3 by dsizzle, 8 years ago

Resolution: fixed
Status: closedreopened

Reopening as I found another critical issue. The fStyle parameter wasn't being unlocked so future calls to GetTransformedFace would hang. Also fontconfig charsets were being leaked. Addressed in latest patch.

by dsizzle, 8 years ago

Patch to fix critical lock issue and memory leaks

comment:4 by dsizzle, 8 years ago

Regarding unit tests for the hrev51176 fixes, that's non-trivial but I will see if I can figure out a reasonable way to write some.

comment:5 by dsizzle, 8 years ago

Ping!

Please see patch for the critical locking issue above.

comment:6 by pulkomandy, 8 years ago

Resolution: fixed
Status: reopenedclosed

Applied in hrev51244. Sorry for the delay. Still no unit tests? :)

Note: See TracTickets for help on using tickets.